--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0cfb8422-5896-47ac-818e-c4bf9d466ff0"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
